--- a/Kakeibo.vcxproj.filters
+++ b/Kakeibo.vcxproj.filters
@@ -47,4 +47,9 @@
       <Filter>リソース ファイル</Filter>
     </ResourceCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="resource\icon.ico">
+      <Filter>リソース ファイル</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
